<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgm"
    tools:context=".math">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/bretour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left" />

        <LinearLayout
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/black"
                android:text="@string/enonce" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/a"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/a"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/op"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/o"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/b"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/b"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/eg"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textColor="@android:color/black"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/eg" />
                <TextView
                    android:id="@+id/c"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textColor="@android:color/black"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/c" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add"
                    android:weightSum="1"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/sous"
                    android:layout_width="150dp"
                    android:weightSum="1"
                    android:layout_height="wrap_content"

                    android:text="@string/sous" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:text="@string/mul" />

                <Button
                    android:id="@+id/div"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:weightSum="1"

                    android:text="@string/div" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/reponse"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/sub"
                    android:textColor="@android:color/holo_red_light"/>

                <Button
                    android:id="@+id/maj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
